@@ -1,4 +1,4 @@
-__version__ = "4.0.28"
+__version__ = "4.0.29"
 
 __authors__ = [
     "Juan Miguel Taboada Godoy <juanmi@juanmitaboada.com>",
