@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.29) stable; urgency=medium
+
+  * Added subject to the template listing
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 04 Aug 2025 07:59:00 +0200
+
+
 django_codenerix_email (4.0.28) stable; urgency=medium
 
   * Support self Message-ID when no other is indicated
